set userdata